javascript readme file included and all bugs fixed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 </head>
 <body>
+<p>Welcome to my program, please click on the button below to start</p>
+
     <button id="gen_pass_button">Generate password</button>
 
 <script src="javascript.js"></script>
